--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Restaurant landing page</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" />
+        <title>Cosmos Eats</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
-        <h1>Hello World!</h1>
+        <!-- navbar -->
+        <nav>
+            <ul id="menu">
+                <li id="logo"><a href="#">Logo</a></li>
+                <li id="item"><a href="#">Menu</a></li>
+                <li id="item"><a href="#">Gallery</a></li>
+                <li id="item"><a href="#">Contact</a></li>
+                <li id="item"><a href="#">About</a></li>
+                <li id="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+            </ul>
+        </nav>    
     </body>
 </html>
