--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <ul id="menu">
                 <li id="logo"><a href="#">Logo</a></li>
-                <li id="item"><a href="#">Menu</a></li>
-                <li id="item"><a href="#">Gallery</a></li>
-                <li id="item"><a href="#">Contact</a></li>
-                <li id="item"><a href="#">About</a></li>
+                <li class="item"><a href="#">Menu</a></li>
+                <li class="item"><a href="#">Gallery</a></li>
+                <li class="item"><a href="#">Contact</a></li>
+                <li class="item"><a href="#">About</a></li>
                 <li id="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
         </nav>    
