--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">        <title>Cosmos Eats</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -26,15 +25,17 @@
         
         <!-- cover starts -->
         <div id="cover">
-            <div class="parallax-bg cover-text img">
-                <div>Dive in</div>
-                <div>the experience of</div>
-                <div><span id="cover-name">LADAKH'S LEGACY</span></div>
-                <div>served with love</div>
-                <div>right in your plate</div>
-                <div id="cover-buttons">
-                    <button>BOOK A TABLE</button>
-                    <button>ORDER NOW</button>
+            <div class="parallax-bg img">
+                <div id="cover-text">
+                    <div>Dive in</div>
+                    <div>the experience of</div>
+                    <div><span id="cover-name">LADAKH'S LEGACY</span></div>
+                    <div>served with love</div>
+                    <div>right in your plate</div>
+                    <div id="cover-buttons">
+                        <button>BOOK A TABLE</button>
+                        <button>ORDER NOW</button>
+                    </div>
                 </div>
             </div>
         </div>
