--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
             <ul id="nav-menu">
                 <li id="logo"><a href="#">Logo</a></li>
-                <li class="item"><a href="#">Menu</a></li>
-                <li class="item"><a href="#">Gallery</a></li>
+                <li class="item"><a href="#menu">Menu</a></li>
+                <li class="item"><a href="#gallery">Gallery</a></li>
                 <li class="item"><a href="#">Contact</a></li>
-                <li class="item"><a href="#">About</a></li>
+                <li class="item"><a href="#details">About</a></li>
                 <li id="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
         </nav>
@@ -73,69 +73,63 @@
         <section id="menu">
             <h2>CHEF'S SPECIAL</h2>
             <div class="menu-grid img">
-                <div class="row">
-                    <div class="menu-item">
-                        <div class="menu-img imgm1 img"></div>
-                        <div class="menu-item-text">
-                            <div class="item-name">Fried momos</div>
-                            <div class="item-desc">
-                                <div>$10</div>
-                                <div><i class="fas fa-shopping-cart"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-item">
-                        <div class="menu-img imgm2 img"></div>
-                        <div class="menu-item-text">
-                            <div class="item-name">Fried momos</div>
-                            <div class="item-desc">
-                                <div>$10</div>
-                                <div><i class="fas fa-shopping-cart"></i></div>
-                            </div>
+                <div class="menu-item menu-item1">
+                    <div class="menu-img imgm1 img"></div>
+                    <div class="menu-item-text">
+                        <div class="item-name">Fried momos</div>
+                        <div class="item-desc">
+                            <div>$10</div>
+                            <div><i class="fas fa-shopping-cart"></i></div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="menu-item">
-                        <div class="menu-img imgm3 img"></div>
-                        <div class="menu-item-text">
-                            <div class="item-name">Fried momos</div>
-                            <div class="item-desc">
-                                <div>$10</div>
-                                <div><i class="fas fa-shopping-cart"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-item">
-                        <div class="menu-img imgm4 img"></div>
-                        <div class="menu-item-text">
-                            <div class="item-name">Fried momos</div>
-                            <div class="item-desc">
-                                <div>$10</div>
-                                <div><i class="fas fa-shopping-cart"></i></div>
-                            </div>
+                <div class="menu-item menu-item2">
+                    <div class="menu-img imgm2 img"></div>
+                    <div class="menu-item-text">
+                        <div class="item-name">Fried momos</div>
+                        <div class="item-desc">
+                            <div>$10</div>
+                            <div><i class="fas fa-shopping-cart"></i></div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="menu-item">
-                        <div class="menu-img imgm5 img"></div>
-                        <div class="menu-item-text">
-                            <div class="item-name">Fried momos</div>
-                            <div class="item-desc">
-                                <div>$10</div>
-                                <div><i class="fas fa-shopping-cart"></i></div>
-                            </div>
+                <div class="menu-item menu-item3">
+                    <div class="menu-img imgm3 img"></div>
+                    <div class="menu-item-text">
+                        <div class="item-name">Fried momos</div>
+                        <div class="item-desc">
+                            <div>$10</div>
+                            <div><i class="fas fa-shopping-cart"></i></div>
                         </div>
                     </div>
-                    <div class="menu-item">
-                        <div class="menu-img imgm6 img"></div>
-                        <div class="menu-item-text">
-                            <div class="item-name">Fried momos</div>
-                            <div class="item-desc">
-                                <div>$10</div>
-                                <div><i class="fas fa-shopping-cart"></i></div>
-                            </div>
+                </div>
+                <div class="menu-item menu-item4">
+                    <div class="menu-img imgm4 img"></div>
+                    <div class="menu-item-text">
+                        <div class="item-name">Fried momos</div>
+                        <div class="item-desc">
+                            <div>$10</div>
+                            <div><i class="fas fa-shopping-cart"></i></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item menu-item5">
+                    <div class="menu-img imgm5 img"></div>
+                    <div class="menu-item-text">
+                        <div class="item-name">Fried momos</div>
+                        <div class="item-desc">
+                            <div>$10</div>
+                            <div><i class="fas fa-shopping-cart"></i></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item menu-item6">
+                    <div class="menu-img imgm6 img"></div>
+                    <div class="menu-item-text">
+                        <div class="item-name">Fried momos</div>
+                        <div class="item-desc">
+                            <div>$10</div>
+                            <div><i class="fas fa-shopping-cart"></i></div>
                         </div>
                     </div>
                 </div>
@@ -146,9 +140,16 @@
         <!-- gallery section begins -->
         <section id="gallery">
             <h2>GALLERY</h2>
-            <div class=" gallery-img imgg1 img"></div>
-            <div class=" gallery-img imgg2 img"></div>
-            <div class=" gallery-img imgg3 img"></div>
+            <div class="gallery-row">
+                <div class=" gallery-img imgg1 img"></div>
+                <div class=" gallery-img imgg2 img"></div>
+                <div class=" gallery-img imgg3 img"></div>
+            </div>
+            <div class="gallery-row">
+                <div class=" gallery-img imgg4 img"></div>
+                <div class=" gallery-img imgg5 img"></div>
+                <div class=" gallery-img imgg6 img"></div>
+            </div>
         </section>
         <!-- gallery section ends -->
 
@@ -197,6 +198,8 @@
             </div>
             
             <div class="white-line"></div>
+
+            <div id="rights">chixt © 2021. All Rights Reversed. </div>
       
           </footer>
         <!-- footer ends -->
